--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Concerts! Recherche
+{% block title %}Concerts! Admin
 {% endblock %}
 
 {% block body %}
 
-    {# Navbar page principale #}
+    {# Navbar page admin #}
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #E3674E;">
         <a class="navbar-brand" href="{{path('concerts')}}">
             <img src="{{ asset('docs/assets/concert.png') }}" width="50" height="50" class="d-none d-sm-inline pr-1" />
@@ -16,11 +16,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="{{path('concerts')}}">Recherche<span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="{{path('admin')}}">Admin</a>
                 </li>
             </ul>
@@ -30,7 +30,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <h1>Bienvenue sur
+            <h1>Administration
                 <div class="navbar-brand">Concerts!</div>
             </h1>
         </div>
