--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,31 +3,31 @@
 {% block title %}Concerts! Admin
 {% endblock %}
 
+{# Partie "dynamique" de la navbar, permettant d'afficher l'onglet actif #}
+{% block navbar %}
+
+    <li class="nav-item">
+        <a class="nav-link" href="{{path('concerts')}}">Recherche<span class="sr-only">(current)</span>
+        </a>
+    </li>
+    <li class="nav-item active">
+        <a class="nav-link" href="{{path('concert_admin_show')}}">Admin</a>
+    </li>
+
+{% endblock %}
+
 {% block body %}
+    <div
+        class="col-12 col-md-4 text-center mx-auto">
+        {# Affichage des flash messages #}
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success flash-message mb-2 mt-2 mx-auto">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
 
-    {# Navbar page admin #}
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #E3674E;">
-        <a class="navbar-brand" href="{{path('concerts')}}">
-            <img src="{{ asset('docs/assets/concert.png') }}" width="50" height="50" class="d-none d-sm-inline pr-1" />
-            Concerts !</a>
-        <div class="brand-subtitle">Le site qui part en live!</div>
-        <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('concerts')}}">Recherche<span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{path('admin')}}">Admin</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-
+    {# Corps de la page #}
     <div class="container">
         <div class="row justify-content-center">
             <h1>Administration
@@ -35,7 +35,42 @@
             </h1>
         </div>
         <div class="row justify-content-center">
-            <h2 class="subtitle">Le site qui part en live!</h2>
+            <a href="{{path('concert_admin_new')}}"><button class="btn btn-outline-success mb-4" type="button">Ajouter un concert
+                <i class="fas fa-plus-circle"></i>
+            </button></a>
+        </div>
+        {# Affichage tableau concerts #}
+        <div class="row justify-content-center">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Date</th>
+                        <th scope="col">Ville</th>
+                        <th scope="col">Artiste</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for concert in concerts %}
+                        <tr>
+                            <td>{{concert.date|date('d/m/Y')}}</td>
+                            <td>{{concert.city.name}}</td>
+                            <td>{{concert.artist.name}}</td>
+                            <td>
+                                <a href="{{path('concert_admin_edit', {"id": concert.id})}}">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                            </td>
+                            <td>
+                                <a href={{path('concert_admin_delete', {"id": concert.id})}}">
+                                    <i class="fas fa-trash-alt"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 {% endblock %}
