--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -35,9 +35,11 @@
             </h1>
         </div>
         <div class="row justify-content-center">
-            <a href="{{path('concert_admin_new')}}"><button class="btn btn-outline-success mb-4" type="button">Ajouter un concert
-                <i class="fas fa-plus-circle"></i>
-            </button></a>
+            <a href="{{path('concert_admin_new')}}">
+                <button class="btn btn-outline-success mb-4" type="button">Ajouter un concert
+                    <i class="fas fa-plus-circle"></i>
+                </button>
+            </a>
         </div>
         {# Affichage tableau concerts #}
         <div class="row justify-content-center">
@@ -63,7 +65,7 @@
                                 </a>
                             </td>
                             <td>
-                                <a href={{path('concert_admin_delete', {"id": concert.id})}}">
+                                <a href="{{path('concert_admin_delete', {"id": concert.id} )}}">
                                     <i class="fas fa-trash-alt"></i>
                                 </a>
                             </td>
