--- a/templates/admin/new.html.twig
+++ b/templates/admin/new.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Concerts! Ajouter ou modifier un concert
+{# Template gérant l'ajout et la modification d'un concert #}
+
+{% block title %}
+    {{ tab_type }}
+    un concert
 {% endblock %}
 
 {# Partie "dynamique" de la navbar, permettant d'afficher l'onglet actif #}
@@ -19,13 +23,19 @@
 {% block body %}
 
     <div class="col-4 mx-auto my-4">
-        <h1> {{ tab_type }} un concert
+        <h1>
+            {{ tab_type }}
+            un concert
         </h1>
         {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{form_widget(form)}}
-        <button class="btn btn-success" type="submit">Valider <i class="fas fa-check-circle"></i></button>
+        <button class="btn btn-success" type="submit">Valider
+            <i class="fas fa-check-circle"></i>
+        </button>
         {{form_end(form)}}
-        <a class="btn btn-secondary mt-2" href="{{path('concert_admin_show')}}" role="button"><i class="fas fa-arrow-circle-left"></i> Retour</a>
+        <a class="btn btn-secondary mt-2" href="{{path('concert_admin_show')}}" role="button">
+            <i class="fas fa-arrow-circle-left"></i>
+            Retour</a>
     </div>
 
 {% endblock %}
