--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
         {% endblock %}
     </head>
 
-    {# Navbar page principale #}
+    {# Navbar : éléments communs à toutes les pages #}
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #E3674E;">
         <a class="navbar-brand" href="{{path('concerts')}}">
             <img src="{{ asset('docs/assets/concert.png') }}" width="50" height="50" class="d-none d-sm-inline pr-1"/>
@@ -37,8 +37,9 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+
                 {% block navbar %}
-                    {# affichage "dynamique" de la navbar permettant d'afficher l'onglet actif #}
+                    {# partie "dynamique" de la navbar permettant d'afficher l'onglet actif #}
                 {% endblock %}
 
             </ul>
@@ -48,6 +49,8 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+        
+            {# Scripts JS pour Bootstrap #}
             <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
             <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
             <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
