--- a/templates/admin/new.html.twig
+++ b/templates/admin/new.html.twig
@@ -9,7 +9,6 @@
 
 {# Partie "dynamique" de la navbar, permettant d'afficher l'onglet actif #}
 {% block navbar %}
-
     <li class="nav-item">
         <a class="nav-link" href="{{path('concerts')}}">Recherche<span class="sr-only">(current)</span>
         </a>
@@ -17,16 +16,16 @@
     <li class="nav-item active">
         <a class="nav-link" href="{{path('concert_admin_show')}}">Admin</a>
     </li>
-
 {% endblock %}
 
 {% block body %}
-
     <div class="col-4 mx-auto my-4">
         <h1>
             {{ tab_type }}
             un concert
         </h1>
+
+        {# Formulaire gérant l'ajout d'un concert #}
         {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         {{form_widget(form)}}
         <button class="btn btn-success" type="submit">Valider
@@ -37,5 +36,4 @@
             <i class="fas fa-arrow-circle-left"></i>
             Retour</a>
     </div>
-
 {% endblock %}
