--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,19 +8,19 @@
             {% block title %}Concerts ! Le site qui part en live !
             {% endblock %}
         </title>
-        {% block stylesheets %}
 
-            {# Links Bootstrap #}
+        {% block stylesheets %}
+            {# Liens Bootstrap #}
             <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
             <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" rel="stylesheet">
             <link
             href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-            {# Link FontAwesome #}
+            {# Lien FontAwesome #}
             <link
             crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" rel="stylesheet">
 
-            {# Link CSS #}
+            {# Lien CSS #}
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         {% endblock %}
     </head>
@@ -35,21 +35,20 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        {# Navbar #}
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-
                 {% block navbar %}
                     {# partie "dynamique" de la navbar permettant d'afficher l'onglet actif #}
                 {% endblock %}
-
             </ul>
         </div>
     </nav>
 
     <body>
         {% block body %}{% endblock %}
+
         {% block javascripts %}
-        
             {# Scripts JS pour Bootstrap #}
             <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
             <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
